--- a/src/styles/form-display.module.scss
+++ b/src/styles/form-display.module.scss
@@ -431,3 +431,9 @@ select.sf-input-field {
     background-color: #2d2d2d;
   }
 }
+
+
+.sf-checkbox-input{
+  width: auto !important;
+  background-color: #007bff;
+}
